remove repeated docs

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "cSpell.words": [
+        "sqflite",
         "usecase",
         "usecases"
-    ]
+    ],
+    "cmake.sourceDirectory": "C:/Users/dongg/Documents/flutter/Personal-Finance-Calculator-App/linux"
 }
