--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,9 +12,14 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   flutter_riverpod: ^2.4.6
+  riverpod_annotation: ^2.3.0
   sqflite: ^2.3.0
   path: ^1.8.3
   intl: ^0.18.1
+  http: ^1.1.0
+  freezed_annotation: ^2.4.1
+  json_annotation: ^4.8.1
+  auto_route: ^7.8.4
 
 dev_dependencies:
   flutter_test:
@@ -22,6 +27,9 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   mockito: ^5.4.2
   build_runner: ^2.4.6
+  freezed: ^2.4.5
+  json_serializable: ^6.7.1
+  auto_route_generator: ^7.3.2
 
 flutter:
   uses-material-design: true
